--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
   <body>
     <div id="pergunta">Date hoje às 21h?</div>
     <div id="botoes">
-      <button id="nao">Não</button>
-      <button id="sim">Sim</button>
+      <button id="nao">Não 😢</button>
+      <button id="sim">Sim, mozão ❤️</button>
     </div>
     <script>
       // Obter as dimensões iniciais do botão "Não"
