--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Date hoje?</title>
-  <link rel="stylesheet" href="./ccs.css">
+  <link rel="stylesheet" href="./css.css">
   <style>
     /* Estilos para centralizar a pergunta */
     #pergunta {
