--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
   // Redirecionar para o link quando o botão "Sim" for clicado
   document.getElementById("sim").onclick = function() {
-    window.location.href = "https://www.instagram.com/malta.beefclub/";
+    window.location.href = "https://www.instagram.com/pulerestaurante/";
   };
 
   // Mover o botão "Não" quando o mouse passar sobre ele
