--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Date hoje?</title>
+  <title>Date?</title>
   <link rel="stylesheet" href="./css.css">
   <style>
     /* Estilos para centralizar a pergunta */
@@ -56,7 +56,7 @@
   </style>
 </head>
 <body>
-<div id="pergunta">Date hoje às 21h?</div>
+<div id="pergunta">Date sexta às 21h?</div>
 <div id="botoes">
   <a href="#" id="sim" class="button">Sim, mozão ❤️</a>
   <a href="#" id="nao" class="button">Não</a>
