--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Date hoje mozão?</title>
+  <title>Cuzinho hoje mozão?</title>
   <link rel="stylesheet" href="./css.css">
   <style>
     /* Estilos para centralizar a pergunta */
@@ -56,9 +56,9 @@
   </style>
 </head>
 <body>
-<div id="pergunta">Date hoje às 21h mozão?</div>
+<div id="pergunta">Cuzinho hoje mozão?</div>
 <div id="botoes">
-  <a href="#" id="sim" class="button">Sim, mozão ❤️</a>
+  <a href="#" id="sim" class="button">Sim ❤️</a>
   <a href="#" id="nao" class="button">Não</a>
 </div>
 <script>
@@ -75,7 +75,7 @@
 
   // Redirecionar para o link quando o botão "Sim" for clicado
   document.getElementById("sim").onclick = function() {
-    window.location.href = "https://www.instagram.com/nolarestaurante/";
+    window.location.href = "https://www.youtube.com/watch?v=DB79HuYbemw";
   };
 
   // Mover o botão "Não" quando o mouse passar sobre ele
