--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Cuzinho hoje mozão?</title>
+  <title>Oi mozão?</title>
   <link rel="stylesheet" href="./css.css">
   <style>
     /* Estilos para centralizar a pergunta */
