--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>Oi mozão</title>
+  <title>Oi</title>
   <link rel="stylesheet" href="./css.css">
   <style>
     /* Estilos para centralizar a pergunta */
@@ -56,7 +56,7 @@
   </style>
 </head>
 <body>
-<div id="pergunta">Cuzinho hoje mozão?</div>
+<div id="pergunta">Date hoje, mozão?</div>
 <div id="botoes">
   <a href="#" id="sim" class="button">Sim ❤️</a>
   <a href="#" id="nao" class="button">Não</a>
@@ -75,7 +75,7 @@
 
   // Redirecionar para o link quando o botão "Sim" for clicado
   document.getElementById("sim").onclick = function() {
-    window.location.href = "https://www.youtube.com/watch?v=DB79HuYbemw";
+    window.location.href = "https://instagram.com/restaurantelasai";
   };
 
   // Mover o botão "Não" quando o mouse passar sobre ele
